srv/awx/Ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: awx
  namespace: awx
spec:
  tls:
    - hosts:
        - awx.sj.ifsc.edu.br
      secretName: tls-ifsc-sje-wildcard
  rules:
    - host: awx.sj.ifsc.edu.br
      http:
        paths:
          - path: /
            backend:
              serviceName: awx-web-svc
              servicePort: 80
