srv/awx/awx.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/whitelist-source-range: "191.36.0.0/17,2804:1454::/32,172.30.0.0/24"
  name: awx
  namespace: awx
spec:
  rules:
    - host: awx.sj.ifsc.edu.br
      http:
        paths:
          - backend:
              serviceName: awx-web-svc
              servicePort: 80
            path: /
  tls:
    - hosts:
        - awx.sj.ifsc.edu.br
      secretName: tls-ifsc-sje-wildcard
